# simple_graphics_library

./: .gitmodules  CMakeLists.txt  build_and_start.bat
include/: Camera.h  CameraBuilder.h  Color.h  Cube.h  GLEW.h  GLFW.h  Model.h  Transformable.h  Window.h
shaders/cube/: fragment_shader.glsl  vertex_shader.glsl
src/: Camera.cpp  CameraBuilder.cpp  Color.cpp  Cube.cpp  GLEW.cpp  GLFW.cpp  Model.cpp  Window.cpp  main.cpp
subprojects/glsl_loader/: CMakeLists.txt
subprojects/glsl_loader/include/glsl_loader/: Shader.h  ShaderLoader.h
subprojects/glsl_loader/src/: Shader.cpp  ShaderLoader.cpp
